--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">IGLoginApp</string>
+
+    <!--Login Screen -->
+    <string name="sign_app1">Don't have an account?</string>
+    <string name="sign_app2">Sign up.</string>
+    <string name="social_login">Continue as Alejandro</string>
+    <string name="sociallogin_content_description">Social login fb</string>
+    <string name="login">Log In</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="password">password</string>
+    <string name="password_content_description">show password</string>
+    <string name="email">email</string>
+    <string name="logo_content_description">lgo</string>
+    <string name="closeapp_content_description">close app</string>
 </resources>
